fix albumCard text overflow

--- a/modules/music/client/components/album/style/albumCard.scss
+++ b/modules/music/client/components/album/style/albumCard.scss
@@ -46,7 +46,6 @@
     padding: 10px;
     color: white;
     //background-color: $color-bg-panels;
-    white-space: nowrap;
     line-height: 1;
     cursor: pointer;
     z-index: 1;
@@ -56,7 +55,12 @@
     }
 
     .name {
+      display: block;
+      width: 100%;
       font-size: 1em;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .artist {
@@ -65,6 +69,7 @@
       font-size: 0.8em;
       white-space: nowrap;
       overflow: hidden;
+      text-overflow: ellipsis;
 
       span {
         text-overflow: ellipsis;
